Fixed background display on mobile devices

--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -105,4 +105,8 @@
         margin-top: 10px;
         font-size: 18px;
     }
+
+    .profile__overlay {
+        background-attachment: initial;
+    }
 }
